<resources>
    <string name="app_name">Share</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_login">登录|注册</string>
    <string name="drawer_share">分享</string>
    <string name="drawer_publish">我的发表</string>
    <string name="drawer_mine_following">我的关注</string>
    <string name="drawer_mine_collection">我的收藏</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_logout">退出登录</string>
    <string name="drawer_mine_follower">我的粉丝</string>
    <string name="item_share_collection_normal">收藏</string>
    <string name="item_share_collection_selected">已收藏</string>
    <string name="publish_cancel">取消</string>
    <string name="publish_publish">发布/分享</string>
    <string name="publish_send">发送</string>
    <string name="publish_content_hint">分享新鲜事...</string>
    <string name="persona_following">关注 </string>
    <string name="persona_follower">粉丝</string>
    <string name="login_enter_phone">请输入手机号码</string>
    <string name="login_enter_password">请输入密码</string>
    <string name="phone_error">请输入正确手机号码</string>
    <string name="password_length_error">密码长度不少于6位</string>
    <string name="password_ensure_same_error">新密码不能与旧密码一样</string>
    <string name="password_ensure_no_same_error">两次密码不一致</string>
    <string name="login_register">注册账号</string>
    <string name="login_forget">忘记密码？</string>
    <string name="register_enter_phone">请输入手机号码</string>
    <string name="register_enter_password">请输入密码</string>
    <string name="login_sign_in">登录</string>
    <string name="register_send">注册</string>
    <string name="forget_enter_phone">请输入手机号码</string>
    <string name="forget_enter_old_password">请输入旧密码</string>
    <string name="forget_send">保存修改</string>
    <string name="forget_enter_new_password">请输入新密码</string>
    <string name="forget_enter_ensure_password">请再次确认密码</string>
    <string name="register_title">Share</string>
    <string name="drawer_manager">管理者选项</string>
    <string name="send_comment_title">发信息</string>
    <string name="send_comment_send">发送</string>
    <string name="send_comment_hint">写点什么...</string>
    <string name="share_detail_comment">评论</string>
    <string name="share_detail_praise">点赞</string>
    <string name="share_detail_praised">已点赞</string>
    <string name="show_pic_title_divider">/</string>
    <string name="show_pic_save">保存</string>
    <string name="show_pic_origin">原图</string>
    <string name="person_list_no_concern">关注</string>
    <string name="person_list_concerned">已关注</string>
    <string name="concern_follower_title">我的粉丝</string>
    <string name="concern_following_title">我的关注</string>
    <string name="concern_default_title">分享人列表</string>
    <string name="menu_home_search">search</string>
    <string name="menu_home_rank">点赞榜</string>
    <string name="setting_title">设置</string>
    <string name="setting_hide_des">屏蔽自己的分享(他人将无法查看)</string>
    <string name="setting_manager_title">管理者选项</string>
    <string name="setting_ban">禁止用户/取消禁止</string>
    <string name="setting_edit_hide_key">编辑屏蔽关键字</string>
    <string name="setting_personal_title">个人设置</string>
    <string name="setting_public_title">通用设置</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_about">关于</string>
    <string name="setting_no_cache">暂无缓存</string>
    <string name="search_popup_search">搜索</string>
    <string name="rank_title">点赞榜</string>
    <string name="mine_collection_title">我的收藏</string>
    <string name="manager_user_title">用户管理</string>
    <string name="manager_user_ban_input">添加禁止的用户名</string>
    <string name="manager_user_ban">禁止</string>
    <string name="manager_user_cancel_ban">取消禁止</string>
    <string name="manager_hide_key_title">屏蔽关键词管理</string>
    <string name="manager_hide_key_hint_input">添加的屏蔽关键词</string>
    <string name="manager_hide_key_add">添加</string>
    <string name="about_us_introduction"> &#160;&#160;&#160;&#160;&#160;&#160;基于图片分享的社交网站，给社交圈里的人提供快速、方便的图片分享平台。</string>
    <string name="about_title">关于</string>
    <string name="about_app_divider">&#160;-&#160;</string>
    <string name="menu_home_share">分享</string>
    <string name="setting_mine_info">个人信息</string>
    <string name="mine_info_title">个人信息</string>
    <string name="mine_info_nickname">昵称</string>
    <string name="mine_info_user_count">账号</string>
    <string name="mine_info_introduction">简介</string>
    <string name="mine_info_sex">性别</string>
    <string name="mine_info_qq">QQ&#160;</string>
    <string name="mine_info_email">邮箱</string>
    <string name="mine_info_page">个人主页</string>
</resources>
