<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:navigationIcon="@mipmap/ic_back"
        app:title="@string/about_title"
        />
<ImageView
    android:layout_width="64dp"
    android:layout_height="64dp"
    android:src="@mipmap/ic_launcher"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="80dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/default_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/about_us_text_size"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app_divider"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/about_us_text_size"
            />
        <TextView
            android:id="@+id/tv_about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1.0.1"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/about_us_text_size"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/about_us_text_size"
        android:text="@string/about_us_introduction"/>
</LinearLayout>