<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="90dp"
    android:textSize="@dimen/register_title_text_size"
    android:text="@string/register_title"
    android:textStyle="bold"
    />
    <android.support.design.widget.TextInputLayout
    android:id="@+id/til_register_phone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/large_margin"
    >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_enter_phone"
        android:textSize="@dimen/register_text_size"
        android:textColorHint="@color/colorSecondaryText"
        android:inputType="phone"
        />
</android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_enter_password"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="@dimen/register_text_size"
            android:inputType="textPassword"

            />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/large_margin"
        android:paddingLeft="@dimen/large_padding"
        android:paddingRight="@dimen/large_padding"
        android:text="@string/register_send"
        android:textSize="@dimen/register_text_size"
        android:textColor="@android:color/white"
        android:background="@color/about_login_button_color"
        />
</LinearLayout>