<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_send_comment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:navigationIcon="@mipmap/ic_back"
        app:title="@string/send_comment_title"
        >
        <TextView
            android:id="@+id/tv_send_comment_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_comment_send"
            android:textColor="@android:color/white"
            android:layout_gravity="end"
            android:layout_margin="@dimen/default_margin"
            />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/et_send_comment_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        android:textSize="@dimen/send_comment_text_size"
        android:textColor="@color/colorPrimaryText"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/send_comment_hint"
        android:minHeight="@dimen/publish_input_min_height"/>
</LinearLayout>