<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_forget_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:src="@mipmap/bg_drawer"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_enter_phone"
            android:inputType="phone"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="@dimen/login_text_size"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_enter_password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="@dimen/login_text_size"

            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/large_margin"
        android:background="@color/about_login_button_color"
        android:paddingLeft="@dimen/large_padding"
        android:paddingRight="@dimen/large_padding"
        android:text="@string/login_sign_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/drawer_login_text_size"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/drawer_login_bottom_text_size"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:text="|"/>

        <TextView
            android:id="@+id/tv_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/drawer_login_bottom_text_size"
            />
    </LinearLayout>
</LinearLayout>