<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
<android.support.v7.widget.Toolbar
    android:id="@+id/tb_setting_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:title="@string/setting_title"
    app:navigationIcon="@mipmap/ic_back"
    android:background="@color/colorPrimary"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_personal_title"
        android:textSize="@dimen/setting_title_text_size"
        android:textColor="@color/colorSecondaryText"
        android:layout_margin="@dimen/default_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_setting_group"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/ll_setting_mine_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/default_padding"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/setting_mine_info"
                android:textSize="@dimen/setting_text_size"
                android:layout_margin="@dimen/default_margin"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_right_arrow"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorDivider"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/setting_hide_des"
                android:textSize="@dimen/setting_text_size"
                android:layout_margin="@dimen/default_margin"
                />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_setting_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_seeting_manager_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_manager_title"
        android:textSize="@dimen/setting_title_text_size"
        android:textColor="@color/colorSecondaryText"
        android:layout_margin="@dimen/default_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_setting_group"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/ll_setting_ban"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/default_padding"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/setting_ban"
                android:textSize="@dimen/setting_text_size"
                android:layout_margin="@dimen/default_margin"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_right_arrow"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorDivider"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"/>

        <LinearLayout
            android:id="@+id/ll_setting_hind_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/default_padding"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/setting_edit_hide_key"
                android:textSize="@dimen/setting_text_size"
                android:layout_margin="@dimen/default_margin"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_right_arrow"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_public_title"
        android:textSize="@dimen/setting_title_text_size"
        android:textColor="@color/colorSecondaryText"
        android:layout_margin="@dimen/default_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_setting_group"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/ll_setting_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/setting_clear_cache"
                android:textSize="@dimen/setting_text_size"
                android:layout_margin="@dimen/default_margin"
                />
            <TextView
                android:id="@+id/tv_setting_cache_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/setting_text_size"
                android:textColor="@android:color/holo_red_dark"
                tools:text="201.00MB"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorDivider"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"/>
        <LinearLayout
            android:id="@+id/ll_setting_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/setting_about"
                android:textSize="@dimen/setting_text_size"
                android:layout_margin="@dimen/default_margin"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_right_arrow"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>