<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/tv_show_pic_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/show_pic_title_text_size"
            tools:text="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_pic_title_divider"
            android:textSize="@dimen/show_pic_title_text_size"
            />

        <TextView
            android:id="@+id/tv_show_pic_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/show_pic_title_text_size"
            tools:text="9"
            />
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_show_pic_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_pic_save"
            android:layout_margin="@dimen/default_margin"/>
        <Button
            android:id="@+id/btn_show_pic_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_pic_origin"
            android:layout_margin="@dimen/default_margin"/>
    </LinearLayout>
</LinearLayout>