<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/forget_top_img_margin_top"
        android:src="@mipmap/ic_change_password"
       
        />
    <android.support.design.widget.TextInputLayout
    android:id="@+id/til_forget_phone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/large_margin"
    android:layout_marginRight="@dimen/large_margin"
    android:layout_marginTop="@dimen/default_margin"
    android:layout_marginBottom="@dimen/default_margin"
    >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forget_enter_phone"
        android:textSize="@dimen/forget_text_size"
        android:textColorHint="@color/colorSecondaryText"
        android:inputType="phone"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_forget_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginRight="@dimen/large_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forget_enter_old_password"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="@dimen/forget_text_size"
            android:inputType="textPassword"

            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_forget_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginRight="@dimen/large_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forget_enter_new_password"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="@dimen/forget_text_size"
            android:inputType="textPassword"

            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_forget_ensure_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginRight="@dimen/large_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forget_enter_ensure_password"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="@dimen/forget_text_size"
            android:inputType="textPassword"

            />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_forget_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/large_margin"
        android:paddingLeft="@dimen/large_padding"
        android:paddingRight="@dimen/large_padding"
        android:text="@string/forget_send"
        android:textSize="@dimen/forget_text_size"
        android:textColor="@android:color/white"
        android:background="@color/about_login_button_color"
        />
</LinearLayout>